Remove unnecessary operation on opening message center.

This CL removes unnecessary image operation on opening message center. With this CL, opening the message center gets 50-500 times faster.

Bug: b/64544553
Bug: 750587
Change-Id: I045f1a285fcacb6dafb997ad2fefbfe4ad54791b
Reviewed-on: https://chromium-review.googlesource.com/616520
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Commit-Queue: Yoshiki Iguchi <yoshiki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494703}
Former-commit-id: 101b811383bbcdefaa86e864275afbea17d902f8